# backend/api-docs/openapi.json
@@ -1152,7 +1152,7 @@
         },
         "/projects/{project_id}/tasks/{task_uuid}/status": {
             "patch": {
-                "description": "Update a task's status (ACTIVE or PAUSED) and update scheduler accordingly",
+                "description": "Update a task's status (ACTIVE or DISABLED) and update scheduler accordingly",
                 "tags": [
                     "tasks"
                 ],
@@ -1290,7 +1290,6 @@
                     "status": {
                         "enum": [
                             "ACTIVE",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
@@ -1347,7 +1346,6 @@
                         "enum": [
                             "ACTIVE",
                             "RUNNING",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
@@ -1688,7 +1686,6 @@
                         "enum": [
                             "ACTIVE",
                             "RUNNING",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
@@ -1771,7 +1768,6 @@
                     "status": {
                         "enum": [
                             "ACTIVE",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
@@ -1811,12 +1807,10 @@
                 "type": "string",
                 "enum": [
                     "ACTIVE",
-                    "PAUSED",
                     "DISABLED"
                 ],
                 "x-enum-varnames": [
                     "TaskGroupStatusActive",
-                    "TaskGroupStatusPaused",
                     "TaskGroupStatusDisabled"
                 ]
             },
@@ -1835,12 +1829,10 @@
                 "type": "string",
                 "enum": [
                     "ACTIVE",
-                    "PAUSED",
                     "DISABLED"
                 ],
                 "x-enum-varnames": [
                     "TaskStatusActive",
-                    "TaskStatusPaused",
                     "TaskStatusDisabled"
                 ]
             },
@@ -1943,7 +1935,6 @@
                     "status": {
                         "enum": [
                             "ACTIVE",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
@@ -1996,7 +1987,6 @@
                         "enum": [
                             "ACTIVE",
                             "RUNNING",
-                            "PAUSED",
                             "DISABLED"
                         ],
                         "allOf": [
